--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,18 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
     box-sizing: content-box;
 }
 
+._ibg{
+    position: relative;
+}
+._ibg img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+
 /* ---HEADER---------------------------------------------------------------------- */
 
 .header {
@@ -125,16 +137,34 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 /* ---MAIN-BLOCK---------------------------------------------------------------------- */
 
 .main-block {
+    position: relative;
 }
+
+
 .main-block__container {
 }
 ._container {
 }
 .main-block__body {
+    max-width: 509px;
+    padding: 184px 0 191px 0;
+    position: relative;
+    z-index: 2;
 }
+.main-block__body > *:not(:last-child){
+    margin: 0 0 35px 0;
+}
+
 .main-block__title {
+    font-weight: 800;
+    font-size: 58px;
+    line-height: 138%;
 }
 .main-block__text {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 150%;
+    color:#737373;
 }
 .main-block__buttons {
 }
@@ -143,4 +173,9 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 .main-block__button_border {
 }
 .main-block__image {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
