--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,9 @@ body{
 .page__advantages {
 }
 
+.page__pracitce {
+}
+
 /* ---HEADER---------------------------------------------------------------------- */
 
 .footer{
@@ -466,4 +469,59 @@ body{
     font-size: 16px;
     line-height: 150%;
     color: #737373;
+}
+
+
+.practice {
+    padding: 80px 0;
+}
+.practice__container {
+}
+
+.practice__header {
+    margin: 0 0 45px 0;
+}
+
+.practice__body {
+    margin: 0 -15px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.practice__column {
+    padding: 0 15px;
+    flex: 0 1 25%;
+}
+.practice__item {
+    background: #fff;
+}
+.item-practice {
+}
+.item-practice__content {
+    padding: 30px;
+}
+.item-practice__link {
+    color: #252b42;
+    display: inline-block;
+}
+.item-practice__link:hover{
+    text-decoration: underline;
+}
+.item-practice__link:not(:last-child){
+    margin: 0 0 15px 0;
+}
+.item-practice__title {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.01em;
+}
+.item-practice__text {
+    letter-spacing: 0.01em;
+    line-height: 143%;
+    font-weight: 500;
+    color: #737373;
+}
+.item-practice__image {
+    display: block;
+    padding: 0 0 69% 0;
 }
