--- a/css/style.css
+++ b/css/style.css
@@ -475,6 +475,17 @@ body{
 .practice {
     padding: 80px 0;
 }
+@media (max-width: 993px){
+    .practice {
+        padding: 40px 0 80px 0;
+    }
+}
+@media (max-width: 767px){
+    .practice {
+        padding: 0 0 40px 0;
+    }
+}
+
 .practice__container {
 }
 
@@ -483,21 +494,37 @@ body{
 }
 
 .practice__body {
-    margin: 0 -15px;
+    margin: 0 -20 -30px;
     display: flex;
     flex-wrap: wrap;
 }
 .practice__column {
-    padding: 0 15px;
+    padding: 0 20px;
+    margin: 0 0 30px 0;
     flex: 0 1 25%;
 }
+@media (max-width: 1030px){
+    .practice__column {
+        flex: 0 1 50%;
+    }
+}
+@media (max-width: 630px){
+    .practice__column {
+        flex: 0 1 100%;
+    }
+}
+
 .practice__item {
     background: #fff;
 }
 .item-practice {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
 }
 .item-practice__content {
     padding: 30px;
+    flex: 1 1 auto;
 }
 .item-practice__link {
     color: #252b42;
@@ -523,5 +550,5 @@ body{
 }
 .item-practice__image {
     display: block;
-    padding: 0 0 69% 0;
+    padding: 0 0 60% 0;
 }
