--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,8 @@ body{
 .whoweare {
     padding: 100px 0 136px 0;
 }
+
+
 .whoweare__container {
 }
 
@@ -570,10 +572,12 @@ body{
     margin: 0 0 100px 0;
 }
 
+
 .whoweare__body {
     display: flex;
     align-items: flex-start;
 }
+
 .whoweare__video {
     flex: 0 0 57%;
     padding: 0px 0px 42.3% 0px;
@@ -593,6 +597,7 @@ body{
     flex: 1 1 auto;
     padding: 20px 0 0 120px;
 }
+
 .whoweare__title {
     font-weight: 700;
     font-size: 40px;
@@ -640,4 +645,47 @@ body{
     font-weight: 600;
     line-height: 171%;
     color: #737373;
+}
+
+@media(max-width: 1080px){
+    .whoweare__content{
+        padding: 0 0 0 50px;
+    }
+}
+
+@media(max-width: 950px){
+    .whoweare__title{
+        font-size: 24px;
+    }
+    .whoweare {
+        padding: 50px 0 50px 0;
+    }
+    .whoweare__content{
+        padding: 0 0 0 0;
+    }
+     .whoweare__body{
+        flex-direction: column-reverse;
+        align-items: stretch;
+    }
+    .whoweare__video:not(:last-child){
+        margin: 50px 0 0 0;
+    }
+    .whoweare__video{
+        padding: 0 0 56.25% 0;
+    }
+    .whoweare__header {
+        margin: 0 0 30px 0;
+    }
+}
+
+@media(max-width: 767px){
+    .whoweare {
+        padding: 0 0 0 0;
+    }
+    .whoweare__top:not(:last-child){
+        margin: 0 0 30px 0;
+    }
+    .whoweare__video:not(:last-child){
+        margin: 30px 0 0 0;
+    }
 }
