--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,10 @@ body{
 }
 
 .page__clients {
+    margin: 0 0 20px 0;
+}
+
+.page__subscribe {
 }
 
 /* ---HEADER---------------------------------------------------------------------- */
@@ -715,4 +719,102 @@ body{
 }
 .clients__item img{
     max-width: 100%;
+}
+
+/*--SUBSCRIBE--------------------------------------------------------------*/
+
+
+.subscribe {
+    position: relative;
+    padding-bottom: 20px;
+}
+.subscribe::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 77px;
+    left:0;
+    background: #252b42;
+}
+
+.subscribe__container {
+}
+
+.subscribe__body {
+    position: relative;
+    z-index: 2;
+    background: #17213c;
+    
+    padding: 30px 50px;
+    
+    
+    
+    border-radius: 2px;
+}
+@media(min-width: 1070px){
+    .subscribe__body{
+        margin: 0 32px;
+    }
+}
+
+
+.subscribe__title {
+    color: #fff;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 133%;
+}
+@media(min-width: 810px){
+    .subscribe__title {
+        max-width: 266px;
+    }
+    .subscribe__body{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+@media(max-width: 810px){
+    .subscribe__title {
+       margin: 0 0 30px 0;
+    }
+    .subscribe__body{
+        margin: 0 -15px;
+        padding: 20px 15px;
+    }
+}
+
+.subscribe__form {
+    flex: 0 1 50%;
+    display: flex;
+    align-items: center;
+}
+.subscribe__input {
+    width: 100%;
+    border: 1px solid #e5e5e5;
+    flex: 1 1 auto;
+    border-radius: 5px 0 0 5px;
+    padding: 0 25px;
+    min-height: 58px;
+    background: #f9f9f9;
+    color: #737373;
+    border-right: 0;
+}
+.subscribe__input:focus{
+    color: #000;
+}
+
+.subscribe__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: #ff7b47;
+    border: 1px solid #e5e5e5;
+    border-radius: 0 5px 5px 0;
+    min-height: 58px;
+    padding: 0 20px;
+    line-height: 200%;
+    color: #fff;
 }
