--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,9 @@ body{
 .page__subscribe {
 }
 
+.page__getintouch {
+}
+
 /* ---HEADER---------------------------------------------------------------------- */
 
 .footer{
@@ -816,5 +819,104 @@ body{
     min-height: 58px;
     padding: 0 20px;
     line-height: 200%;
+    color: #fff;
+}
+
+/*--GET-IN-TOUCH-----------------------------------------------------------------*/
+
+
+.getintouch {
+    padding: 80px 0 148px 0;
+}
+.getintouch__container {
+}
+
+.getintouch__header {
+    margin: 0 0 80px 0;
+}
+
+.getintouch__items {
+    margin: 0 -15px;
+}
+@media(min-width: 992px){
+    .getintouch__items {
+        margin: 0;
+        display: flex;
+        align-items: center;
+    }
+}
+@media(max-width: 1010px){
+    .getintouch {
+        padding: 50px 0;
+    }
+    .getintouch__header {
+        margin: 0 0 50px 0;
+    }
+}
+.getintouch__item {
+    flex: 0 1 33.3333%;
+}
+.getintouch__item > *:not(:last-child){
+    margin: 0 0 15px 0;
+}
+
+.item-getintouch {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    padding: 50px 15px;
+}
+.item-getintouch__icon {
+}
+.item-getintouch__emails {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.item-getintouch__email {
+    color: inherit;
+    font-weight: 600;
+    line-height: 171%;
+}
+.item-getintouch__email:hover{
+    text-decoration: underline;
+}
+
+.item-getintouch__label {
+    font-weight: 700;
+    line-height: 150%;
+}
+
+.item-getintouch__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 44px;
+    border: 1px solid #ff7b47;
+    color: #ff7b47;
+    border-radius: 5px;
+    padding: 5px 20px;
+    font-weight: 600;
+    line-height: 171%;
+    transition: all 0.3s ease 0s;
+}
+
+.item-getintouch__button:hover {
+    background-color: #ff7b47;
+    color: #fff;
+}
+
+.item-getintouch_active{
+    padding: 80px 15px;
+    background: #252b42;
+    color: #fff;
+}
+
+.item-getintouch_active .item-getintouch__button{
+    border: 1px solid #fff;
     color: #fff;
 }
