feat: add footer

--- a/css/style.css
+++ b/css/style.css
@@ -982,3 +982,125 @@ body{
     border: 1px solid #ff7b47;
     background: #fff;
 }
+
+/*-FOOTER--------------------------------------------*/
+
+.footer {
+}
+.footer__top {
+    background: #252b42;
+    padding: 30px 0;
+}
+.footer__main {
+}
+.footer__row{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+}
+.footer__column {
+    padding: 20px 15px;
+    flex: 0 1 16.66667%;
+    min-width: 170px;
+}
+.footer__column:last-child{
+    flex: 0 1 33.2%
+}
+@media(max-width: 992px){
+    .footer__column{
+        flex: 0 1 25%
+    }
+    .footer__column:last-child{
+        flex: 0 1 100%;
+    }
+}
+@media(max-width: 760px){
+    .footer__column{
+        flex: 0 1 50%
+    }
+}
+.footer__label {
+    font-weight: 700;
+    color: #fff;
+    font-size: 16px;
+    line-height: 150%;
+    margin: 0 0 20px 0;
+}
+.footer__menu {
+}
+.menu-footer {
+}
+.menu-footer__list {
+}
+.menu-footer__item:not(:last-child) {
+    margin: 0 0 10px 0;
+}
+.menu-footer__link {
+    font-weight: 600;
+    line-height: 171%;
+    color: #fff;
+}
+.menu-footer__link:hover{
+    text-decoration: underline;
+}
+.footer__contacts {
+    display: flex;
+    flex-direction: column;
+}
+.contacts-footer {
+}
+.contacts-footer__item{
+    padding: 0 0 0 34px;
+    display: flex;
+    align-items: center;
+    min-height: 30px;
+    color: #fff;
+}
+.contacts-footer__item:hover{
+    text-decoration: underline;
+}
+.contacts-footer__item:not(:last-child) {
+    margin: 0 0 10px 0;
+}
+.contacts-footer__item_phone {
+    background: url(../img/footer/icons/01.svg) 0 0 no-repeat;
+}
+.contacts-footer__item_map {
+    background: url(../img/footer/icons/02.svg) 0 0 no-repeat;
+}
+.contacts-footer__item_email {
+    background: url(../img/footer/icons/03.svg) 0 0 no-repeat;
+}
+.footer__bottom {
+    padding: 25px 0;
+}
+.footer__container {
+
+}
+@media(min-width: 767px){
+    .footer__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+.footer__copy {
+    font-weight: 600;
+    line-height: 171%;
+    color:#737373
+}
+.footer__social {
+}
+.social {
+    display: flex;
+    align-items: center;
+}
+.social__item {
+}   
+.social_item:not(:last-child){
+    margin: 0 20px 0 0;
+}
+
+.social__item img{
+    vertical-align: top;
+}
